--- a/Tella_CMS/Views/Customer/Index.cshtml
+++ b/Tella_CMS/Views/Customer/Index.cshtml
@@ -7,7 +7,7 @@
     <h1>Khách hàng</h1>
 
 <p>
-    <a asp-action="Create">TẠo mới</a>
+    <a asp-action="Create">Tạo mới</a>
 </p>
 <table class="table" id="table">
     <thead>
