--- a/Tella_CMS/Views/VIP_Card/CapThe.cshtml
+++ b/Tella_CMS/Views/VIP_Card/CapThe.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tella_CMS.Models.VipCard
+﻿@model Tella_CMS.Efs.Entities.VIP_Card
 
 
 <div class="alert alert-primary" role="alert">
@@ -10,7 +10,7 @@
 
     <div class="row form-group">
         <div class="col-md-3 text-md-right ">
-            <label  class="col-form-label">Số seri: </label>
+            <label class="col-form-label">Số seri: </label>
             <span class="text-danger">*</span>
         </div>
         <div class="col-md-7">
@@ -23,14 +23,14 @@
 
     <div class="row form-group">
         <div class="col-md-3 text-md-right ">
-            <label asp-for="FkCustomerId" class="col-form-label">Nhập mã khách hàng</label>
+            <label asp-for="Fk_Customer_Id" class="col-form-label">Nhập mã khách hàng</label>
             <span class="text-danger">*</span>
         </div>
         <div class="col-md-7">
-            <input asp-for="FkCustomerId" class="k-textbox form-control" required />
+            <input asp-for="Fk_Customer_Id" class="k-textbox form-control" required />
         </div>
         <div class="offset-md-3 col-md-7 at-wrapper-validate">
-            <span asp-validation-for="FkCustomerId" class="text-danger"></span>
+            <span asp-validation-for="Fk_Customer_Id" class="text-danger"></span>
         </div>
     </div>
     <div class="row form-group">
