--- a/Tella_CMS/Views/Customer/Details.cshtml
+++ b/Tella_CMS/Views/Customer/Details.cshtml
@@ -1,73 +1,78 @@
-﻿@model Tella_CMS.Models.Customer
+﻿@model Tella_CMS.Efs.Entities.Customer
 
 @{
-    ViewData["Title"] = "Chi tiết trọng tài";
+    ViewData["Title"] = "Details";
 }
 
+<h1>Details</h1>
 
-<h4>Chi tiết Khách hàng</h4>
-<hr />
-
-<div class="row form-group">
-    <div class="col-md-3 text-md-right ">
-    </div>
-    <div class="col-md-7">
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Sửa</a>
-        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Xoá</a>
-        <a asp-action="Index" class="k-button">Quay lại</a>
-    </div>
+<div>
+    <h4>Customer</h4>
+    <hr />
+    <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Code)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Code)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FullName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FullName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Age)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Age)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address1)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address1)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address2)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address2)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Telephone)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Telephone)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CreatedDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CreatedDate)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Active)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Active)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Fk_Customer_Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Fk_Customer_Id)
+        </dd>
+    </dl>
 </div>
-
-
-
-<div class="row form-group">
-    <div class="col-md-3 text-md-right details-label">
-        Mã:
-    </div>
-    <div class="col-md-7">
-        @Html.DisplayFor(model => model.Code)
-    </div>
-</div>
-
-<div class="row form-group">
-    <div class="col-md-3 text-md-right details-label">
-        Tên KH:
-    </div>
-    <div class="col-md-7">
-        @Html.DisplayFor(model => model.FullName)
-    </div>
-</div>
-<div class="row form-group">
-    <div class="col-md-3 text-md-right details-label">
-        SĐT:
-    </div>
-    <div class="col-md-7">
-        @Html.DisplayFor(model => model.Telephone)
-    </div>
-</div>
-<div class="row form-group">
-    <div class="col-md-3 text-md-right details-label">
-Địa chỉ:
-    </div>
-    <div class="col-md-7">
-        @Html.DisplayFor(model => model.Address1)
-    </div>
-</div>
-<div class="row form-group">
-    <div class="col-md-3 text-md-right details-label">
-        Email:
-    </div>
-    <div class="col-md-7">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-</div>
-
-<div class="row form-group">
-    <div class="col-md-3 text-md-right ">
-    </div>
-    <div class="col-md-7">
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Sửa</a>
-        <a asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Xoá</a>
-        <a asp-action="Index" class="k-button">Quay lại</a>
-    </div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
