--- a/Tella_CMS/Views/Customer/Edit.cshtml
+++ b/Tella_CMS/Views/Customer/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tella_CMS.Models.Customer
+﻿@model Tella_CMS.Efs.Entities.Customer
 
 @{
     ViewData["Title"] = "Edit";
@@ -59,9 +59,9 @@
                 </label>
             </div>
             <div class="form-group">
-                <label asp-for="FkCustomerId" class="control-label"></label>
-                <input asp-for="FkCustomerId" class="form-control" />
-                <span asp-validation-for="FkCustomerId" class="text-danger"></span>
+                <label asp-for="Fk_Customer_Id" class="control-label"></label>
+                <input asp-for="Fk_Customer_Id" class="form-control" />
+                <span asp-validation-for="Fk_Customer_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
