--- a/Tella_CMS/Views/Customer/Index.cshtml
+++ b/Tella_CMS/Views/Customer/Index.cshtml
@@ -4,41 +4,35 @@
     ViewData["Title"] = "Khách hàng";
 }
 
-    <h1>Khách hàng</h1>
+<h1>Danh sách Khách Hàng</h1>
 
 <p>
-    <a asp-action="Create">TẠo mới</a>
+    <a asp-action="Create">Thêm thông tin Khách Hàng</a>
 </p>
 <table class="table" id="table">
     <thead>
         <tr>
             <th></th>
+            <th>STT</th>
             <th>
-                Mã KH
+                Mã Khách Hàng
             </th>
             <th>
-                Họ tên
+                Tên Khách Hàng
+            </th>
+
+            <th>
+                Địa chỉ
             </th>
             <th>
                 Năm sinh
             </th>
             <th>
-                Địa chỉ
-            </th>
-            <th>
                 SĐT
             </th>
             <th>
-                Email
+                Trạng thái
             </th>
-            <th>
-                Ngày tạo
-            </th>
-
-            <th>
-                Loại KH
-            </th>
-
         </tr>
     </thead>
     <tbody>
@@ -49,7 +43,11 @@
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id">Sửa</a>
                     <a class="btn btn-success" asp-action="Details" asp-route-id="@item.Id">Xem</a>
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Xoá</a>
+                    <a class="btn btn-danger" asp-action="CapThe" asp-route-id="@item.Id">Cấp thẻ</a>
 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Stt)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Code)
@@ -58,24 +56,30 @@
                     @Html.DisplayFor(modelItem => item.FullName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Age)
+                    @Html.DisplayFor(modelItem => item.Address1)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Address1)
+                    @Html.DisplayFor(modelItem => item.Age)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Telephone)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedDate)
-                </td>
+                @{
+                    if (item.FkCustomerId == (int)RowStatusEnum.Normal)
+                    {
+                        <td>
+                            Normal
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.FkCustomerId)
-                </td>
+                        </td>
+                    }
+                    else
+                    {
+                        <td>
+                            VIP
+
+                        </td>
+                    }
+                }
 
             </tr>
         }
