--- a/Tella_CMS/Views/Shared/_Layout.cshtml
+++ b/Tella_CMS/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Index">Khách hàng</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="VipCard" asp-action="Index">VIP Card</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vip_Card" asp-action="Index">VIP Card</a>
                         </li>
                     </ul>
                 </div>
