--- a/Tella_CMS/Views/Shared/_Layout.cshtml
+++ b/Tella_CMS/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Sản phẩm</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="VipCard" asp-action="Index">VIP Card</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Vip_Card" asp-action="Index">VIP Card</a>
                         </li>
                     </ul>
                 </div>
