--- a/Tella_CMS/Views/Shared/_Layout.cshtml
+++ b/Tella_CMS/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Sản phẩm</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="KHVIP">Khách Hàng VIP</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vip_Card" asp-action="Index">VIP Card</a>
                         </li>
                     </ul>
