--- a/Tella_CMS/Views/Shared/_Layout.cshtml
+++ b/Tella_CMS/Views/Shared/_Layout.cshtml
@@ -38,6 +38,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Vip_Card" asp-action="Index">VIP Card</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Order_Pro" asp-action="Index">Đơn hàng</a>
+                        </li>
                     </ul>
                 </div>
             </div>
