--- a/Tella_CMS/Views/VIP_Card/Index.cshtml
+++ b/Tella_CMS/Views/VIP_Card/Index.cshtml
@@ -4,8 +4,9 @@
     ViewData["Title"] = "VIP Card";
 }
 
-<h1>Danh sách VIP Card trắng</h1>
-
+    <div style="text-align: center" class="alert alert-primary" role="alert">
+        <h1>Danh sách VIP Card trắng</h1>
+    </div>
 <p>
     <a asp-action="Create">Thêm thông tin thẻ trống</a>
 </p>
