--- a/Tella_CMS/Views/Order_Pro/Create.cshtml
+++ b/Tella_CMS/Views/Order_Pro/Create.cshtml
@@ -1,77 +1,82 @@
 ﻿@model Tella_CMS.Efs.Entities.Order_Pro
 
-@{
-    ViewData["Title"] = "Create";
-}
-
-<h1>Create</h1>
-
-<h4>Order_Pro</h4>
+<div style="text-align: center" class="alert alert-primary" role="alert">
+    <h4>Tạo đơn hàng mới</h4>
+</div>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Code" class="control-label"></label>
-                <input asp-for="Code" class="form-control" />
-                <span asp-validation-for="Code" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Fk_Customer_Id" class="control-label"></label>
-                <input asp-for="Fk_Customer_Id" class="form-control" />
-                <span asp-validation-for="Fk_Customer_Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Fk_Product_Id" class="control-label"></label>
-                <input asp-for="Fk_Product_Id" class="form-control" />
-                <span asp-validation-for="Fk_Product_Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Quanlity" class="control-label"></label>
-                <input asp-for="Quanlity" class="form-control" />
-                <span asp-validation-for="Quanlity" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedBy" class="control-label"></label>
-                <input asp-for="CreatedBy" class="form-control" />
-                <span asp-validation-for="CreatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedDate" class="control-label"></label>
-                <input asp-for="CreatedDate" class="form-control" />
-                <span asp-validation-for="CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedBy" class="control-label"></label>
-                <input asp-for="UpdatedBy" class="form-control" />
-                <span asp-validation-for="UpdatedBy" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdatedDate" class="control-label"></label>
-                <input asp-for="UpdatedDate" class="form-control" />
-                <span asp-validation-for="UpdatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RowStatus" class="control-label"></label>
-                <input asp-for="RowStatus" class="form-control" />
-                <span asp-validation-for="RowStatus" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+<form asp-controller="Order_Pro" asp-action="Create" method="post">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right ">
+        </div>
+        <div class="col-md-7">
+            <input type="submit" value="Tạo" class="btn btn-primary" />
+            <a asp-action="Index" class="k-button">Quay lại</a>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right ">
+            <label asp-for="Code" class="col-form-label">Mã đơn hàng</label>
+            <span class="text-danger">*</span>
+        </div>
+        <div class="col-md-7">
+            <input asp-for="Code" class="k-textbox form-control" placeholder="VD: XH17102112019001 (Địa chỉ _ Ngày tháng _ Mã số) " required />
+        </div>
+        <div class="offset-md-3 col-md-7 at-wrapper-validate">
+            <span asp-validation-for="Code" class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right ">
+            <label asp-for="Fk_Customer_Id" class="col-form-label">Mã khách hàng</label>
+            <span class="text-danger">*</span>
+        </div>
+        <div class="col-md-7">
+            <input asp-for="Fk_Customer_Id" class="k-textbox form-control" required />
+        </div>
+        <div class="offset-md-3 col-md-7 at-wrapper-validate">
+            <span asp-validation-for="Fk_Customer_Id" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right ">
+            <label asp-for="Fk_Product_Id" class="col-form-label">Mã sản phẩm</label>
+            <span class="text-danger">*</span>
+        </div>
+        <div class="col-md-7">
+            <input asp-for="Fk_Product_Id" class="k-textbox form-control" required />
+        </div>
+        <div class="offset-md-3 col-md-7 at-wrapper-validate">
+            <span asp-validation-for="Fk_Product_Id" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right ">
+            <label asp-for="Quanlity" class="col-form-label">Số lượng</label>
+            <span class="text-danger">*</span>
+        </div>
+        <div class="col-md-7">
+            <input asp-for="Quanlity" class="k-textbox form-control" required />
+        </div>
+        <div class="offset-md-3 col-md-7 at-wrapper-validate">
+            <span asp-validation-for="Quanlity" class="text-danger"></span>
+        </div>
+    </div>  
+    
+
+
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right ">
+        </div>
+        <div class="col-md-7">
+            <input type="submit" value="Tạo" class="btn btn-primary" />
+            <a asp-action="Index" class="k-button">Quay lại</a>
+        </div>
+    </div>
+</form>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
