--- a/Tella_CMS/Views/Order_Pro/Delete.cshtml
+++ b/Tella_CMS/Views/Order_Pro/Delete.cshtml
@@ -1,81 +1,110 @@
-﻿@model Tella_CMS.Efs.Entities.Order_Pro
+﻿@model Tella_CMS.Efs.Entities.Oder_view
 
 @{
     ViewData["Title"] = "Delete";
 }
-
-<h1>Delete</h1>
+    <div style="text-align: center" class="alert alert-primary" role="alert">
+        <h1>Xoá đơn hàng</h1>
+    </div>
 
 <h3>Are you sure you want to delete this?</h3>
+
 <div>
-    <h4>Order_Pro</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
-        </dt>
-        <dd class = "col-sm-10">
+
+    <form asp-action="DeleteConfirmed" method="post">
+        <input type="hidden" name="Id" value="@Model.Code" />
+        <div class="row form-group">
+            <div class="col-md-3 text-md-right ">
+            </div>
+            <div class="col-md-7">
+                <input type="submit" value="Xoá" class="btn btn-danger" />
+                <a asp-action="Edit" asp-route-id="@Model.Code" class="btn btn-primary">Sửa</a>
+                <a asp-action="Details" asp-route-id="@Model.Code" class="k-button btn btn-info">Xem</a>
+                <a asp-action="Index" class="k-button">Quay lại</a>
+            </div>
+        </div>
+    </form>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Mã đơn hàng:
+        </div>
+        <div class="col-md-7">
             @Html.DisplayFor(model => model.Code)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fk_Customer_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fk_Customer_Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fk_Product_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fk_Product_Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quanlity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quanlity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RowVersion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RowVersion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RowStatus)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RowStatus)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        </div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Tên khách hàng:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.TenKH)
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Tên sản phẩm:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.TenSP)
+        </div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Số lượng:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.SoLuong)
+        </div>
+    </div>
+
+
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Năm sinh:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.Age)
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Số điện thoại:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.SDT)
+        </div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Địa chỉ:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.DiaChi)
+        </div>
+    </div>
+    <div class="row form-group">
+        <div class="col-md-3 text-md-right details-label">
+            Ngày xuất đơn:
+        </div>
+        <div class="col-md-7">
+            @Html.DisplayFor(model => model.NgayMua)
+        </div>
+    </div>
+
+    <form asp-action="DeleteConfirmed" method="post">
+        <input type="hidden" name="Id" value="@Model.Code" />
+        <div class="row form-group">
+            <div class="col-md-3 text-md-right ">
+            </div>
+            <div class="col-md-7">
+                <input type="submit" value="Xoá" class="btn btn-danger" />
+                <a asp-action="Edit" asp-route-id="@Model.Code" class="btn btn-primary">Sửa</a>
+                <a asp-action="Details" asp-route-id="@Model.Code" class="k-button btn btn-info">Xem</a>
+                <a asp-action="Index" class="k-button">Quay lại</a>
+            </div>
+        </div>
     </form>
 </div>
