--- a/Tella_CMS/Views/Order_Pro/Details.cshtml
+++ b/Tella_CMS/Views/Order_Pro/Details.cshtml
@@ -1,78 +1,102 @@
-﻿@model Tella_CMS.Efs.Entities.Order_Pro
+﻿@model Tella_CMS.Efs.Entities.Oder_view
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
-<div>
-    <h4>Order_Pro</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Code)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Code)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fk_Customer_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fk_Customer_Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fk_Product_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fk_Product_Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quanlity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quanlity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedBy)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UpdatedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UpdatedDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RowVersion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RowVersion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RowStatus)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RowStatus)
-        </dd>
-    </dl>
+<div style="text-align: center" class="alert alert-primary" role="alert">
+    <h1>Chi tiết đơn hàng</h1>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row form-group">
+    <div class="col-md-3 text-md-right ">
+    </div>
+    <div class="col-md-7">
+        <a asp-action="Edit" asp-route-id="@Model.Code" class="btn btn-primary">Sửa</a>
+        <a asp-action="Delete" asp-route-id="@Model.Code" class="btn btn-danger">Xoá</a>
+        <a asp-action="Index" class="k-button">Quay lại</a>
+    </div>
 </div>
+
+
+
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Mã đơn hàng:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.Code)
+    </div>
+</div>
+
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Tên khách hàng:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.TenKH)
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Tên sản phẩm:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.TenSP)
+    </div>
+</div>
+
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Số lượng:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.SoLuong)
+    </div>
+</div>
+
+
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Năm sinh:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.Age)
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Số điện thoại:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.SDT)
+    </div>
+</div>
+
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Địa chỉ:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.DiaChi)
+    </div>
+</div>
+<div class="row form-group">
+    <div class="col-md-3 text-md-right details-label">
+        Ngày xuất đơn:
+    </div>
+    <div class="col-md-7">
+        @Html.DisplayFor(model => model.NgayMua)
+    </div>
+</div>
+
+<div class="row form-group">
+    <div class="col-md-3 text-md-right ">
+    </div>
+    <div class="col-md-7">
+        <a asp-action="Edit" asp-route-id="@Model.Code" class="btn btn-primary">Sửa</a>
+        <a asp-action="Delete" asp-route-id="@Model.Code" class="btn btn-danger">Xoá</a>
+        <a asp-action="Index" class="k-button">Quay lại</a>
+    </div>
+</div>
+
