--- a/Tella_CMS/Views/Order_Pro/Index.cshtml
+++ b/Tella_CMS/Views/Order_Pro/Index.cshtml
@@ -66,7 +66,7 @@
                     @Html.DisplayFor(modelItem => item.DiaChi)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.DiaChi)
+                    @item.NgayTao.ToString("dd/MM/yyyy")
                 </td>
                 <td>
                     <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Code">Sửa</a>
